Differ Color With Brush

--- a/CookPopularControl/Themes/AnimationPathStyle.xaml
+++ b/CookPopularControl/Themes/AnimationPathStyle.xaml
@@ -8,7 +8,7 @@
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="IsPlay" Value="False" />
-                <Setter Property="Stroke" Value="{DynamicResource UnEnabledColor}" />
+                <Setter Property="Stroke" Value="{DynamicResource UnEnabledBrush}" />
             </Trigger>
         </Style.Triggers>
     </Style>
