--- a/CookPopularControl/Themes/ComboBoxStyle.xaml
+++ b/CookPopularControl/Themes/ComboBoxStyle.xaml
@@ -11,7 +11,7 @@
     <Style x:Key="DefaultComboBoxStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource ComboBoxBaseStyle}">
         <Setter Property="assistant:ComboBoxAssistant.IsClickDown" Value="True" />
         <Setter Property="attached:SelectorAttached.SelectorItemType" Value="Default" />
-        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource DefaultBackground}"/>
+        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource DefaultBackgroundBrush}"/>
         <Setter Property="attached:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource PrimaryColorTheme}"/>
         <Setter Property="assistant:ComboBoxAssistant.DropDownButtonFill" Value="{DynamicResource PrimaryColorTheme}"/>
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5"/>
@@ -31,7 +31,7 @@
     <Style x:Key="DefaultMultiComboBoxStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MultiComboBoxBaseStyle}">
         <Setter Property="assistant:ComboBoxAssistant.IsClickDown" Value="True" />
         <Setter Property="attached:SelectorAttached.SelectorItemType" Value="Default" />
-        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource DefaultBackground}"/>
+        <Setter Property="attached:SelectorAttached.ItemsListBackground" Value="{DynamicResource DefaultBackgroundBrush}"/>
         <Setter Property="attached:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource PrimaryColorTheme}"/>
         <Setter Property="assistant:ComboBoxAssistant.DropDownButtonFill" Value="{DynamicResource PrimaryColorTheme}"/>
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5"/>
