--- a/CookPopularControl/Themes/MessageDialogStyle.xaml
+++ b/CookPopularControl/Themes/MessageDialogStyle.xaml
@@ -1,46 +1,76 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ctl="clr-namespace:CookPopularControl.Controls.Windows">
+                    xmlns:win="clr-namespace:CookPopularControl.Controls.Windows"
+                    xmlns:panel="clr-namespace:CookPopularControl.Controls.Panels"
+                    xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Backcolors/DefaultPopularColor.xaml"/>
+        <!--<ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Backcolors/DefaultPopularColor.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/FontFamily.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/EffectShadow.xaml"/>
-        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/SystemConstValue.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/SystemConstValue.xaml"/>-->
 
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ButtonStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ChromeWindowStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="BaseTextBlockStyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontFamily" Value="{StaticResource RobotoFonts}" />
-        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+    <Style x:Key="MessageDialogTextBlockStyle" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+        <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
         <Setter Property="FontStretch" Value="Normal" />
-        <Setter Property="Foreground" Value="{StaticResource PrimaryForeground}" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}" />
     </Style>
 
-    <Style x:Key="BaseMessageDialog" TargetType="{x:Type ctl:MessageDialog}" BasedOn="{StaticResource DefaultChromeWindowStyle}">
+    <Style x:Key="MessageDialogSelectedButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
+        <Setter Property="MinWidth" Value="60" />
+        <Setter Property="Margin" Value="8,0" />
+        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
+    </Style>
+
+    <Style x:Key="MessageDialogUnSelectedButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
+        <Setter Property="MinWidth" Value="60" />
+        <Setter Property="Margin" Value="8,0" />
+        <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
+    </Style>
+
+    <Style x:Key="DefaultMessageDialogStyle" TargetType="{x:Type win:MessageDialog}" BasedOn="{StaticResource DefaultChromeWindowStyle}">
         <Setter Property="MinHeight" Value="172"/>
         <Setter Property="MinWidth" Value="335"/>
         <Setter Property="MaxWidth" Value="476"/>
         <Setter Property="MaxHeight" Value="680"/>
-        <Setter Property="ResizeMode" Value="CanMinimize"/>
+        <Setter Property="ResizeMode" Value="NoResize"/>
         <Setter Property="SizeToContent" Value="WidthAndHeight"/>
         <Setter Property="ShowInTaskbar" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ctl:MessageDialog}">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
-                            Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                <ControlTemplate TargetType="{x:Type win:MessageDialog}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="#FFFFFFFF">
                         <Grid Margin="{TemplateBinding Padding}">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition />
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" MinHeight="26"/>
+                                <RowDefinition Height="10"/>
                             </Grid.RowDefinitions>
-                            <DockPanel>
-                                <TextBlock Text="{TemplateBinding Title}" Style="{StaticResource BaseTextBlockStyle}"/>
-                                <Button />
-                            </DockPanel>
+                            <panel:SimpleGrid Grid.Row="0" Background="{TemplateBinding ClientAeroCaptionBarBackground}" TextElement.Foreground="{TemplateBinding ClientAeroCaptionForeground}">
+                                <TextBlock Text="{TemplateBinding Title}" Foreground="{TemplateBinding ClientAeroCaptionForeground}" Style="{StaticResource MessageDialogTextBlockStyle}" 
+                                           HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0"/>
+                                <Button x:Name="CloseButton" Content="&#xe600;" FontFamily="{DynamicResource WindowIcons}" Style="{StaticResource WindowIconStyle}"
+                                        Command="{x:Static SystemCommands.CloseWindowCommand}" ToolTip="关闭" HorizontalAlignment="Right" Cursor="Arrow"/>
+                            </panel:SimpleGrid>
+                            <Grid Grid.Row="1" HorizontalAlignment="Center">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Path Width="30" Height="30" Data="{TemplateBinding Image}" Fill="{TemplateBinding ImageBrush}" Stretch="Uniform"
+                                      Visibility="{TemplateBinding IsShowImage,Converter={toolConverters:BooleanToVisibilityConverter}}"/>
+                                <TextBlock Grid.Column="1" Text="{TemplateBinding Message}" Style="{StaticResource MessageDialogTextBlockStyle}" TextWrapping="Wrap" 
+                                           HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8,0"/>
+                            </Grid>
+                            <StackPanel Grid.Row="2" x:Name="PART_Panel" Orientation="Horizontal" HorizontalAlignment="Center"/>
                         </Grid>
                     </Border>
                 </ControlTemplate>
