--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -54,7 +54,8 @@
             <local:DialogBoxDemo />
             <TextBox Text="12312323" Width="100" Height="35" HorizontalAlignment="Right"/>
         </pc:SimpleGrid>-->
-        <local:MessageDialogDemo />
+        <!--<local:MessageDialogDemo />-->
+        <local:SwiperDemo />
     </Grid>
 
 
